Fixed the z-index on the modal for mobile view.

--- a/_sass/_enquire-now.scss
+++ b/_sass/_enquire-now.scss
@@ -39,6 +39,7 @@ input, textarea {
 }
 
 .reveal-modal {
+  z-index: 7000 !important;
   a {
     color: $na-colour-blue !important;
     line-height: inherit;
